Home controller and Tag helper created

--- a/SportsStore.Tests/SportsStore.Tests.csproj
+++ b/SportsStore.Tests/SportsStore.Tests.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SportsStore-MVC\SportsStore-MVC.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
