--- a/SportsStore-MVC/SportsStore-MVC.csproj
+++ b/SportsStore-MVC/SportsStore-MVC.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Pages\Admin\IdentityUsers.cshtml" />
+  </ItemGroup>
+
 </Project>
